# playplot

./: .gitignore  LICENCE  Makefile  README.md  requirements.txt  setup.cfg
docs/: .buildinfo  api.html  exception-handling.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  the-plot-function.html
docs/_modules/: index.html
docs/_modules/makeplotplayable/: _session.html  _util.html
docs/_modules/playplot/: _util.html  session.html
docs/_sources/: exception-handling.rst.txt  getting-started.rst.txt  index.rst.txt  the-plot-function.rst.txt
docs/_static/: documentation_options.js
example_data/: __init__.py
examples/: a.ipynb  a.py  advanced.ipynb  basic.ipynb  basic.py  dill_test_a.py  dill_test_b.py  examples.ipynb  intermediate.ipynb  minimal.ipynb  minimal.py
examples/example_data/: __init__.py  bach_bwv245_no22_vokalensemble_ilmenau_annotations.csv
sphinx/source/: api.rst  conf.py  getting-started.rst  index.rst  the-plot-function.rst
src/makeplotplayable/: __init__.py  _audioProcess.py  _plotProcess.py  _session.py  _util.py
src/playplot/: __init__.py  _audioProcess.py  _plotProcess.py  _util.py  session.py
tests/: mpp_test.py
