[metadata]
name = make-plot-playable
version = 0.0.2
author = Daniel Keitel
author_email = daniel.mg.keitel@fau.de
description = Create and sync multiple interactive matplotlib plots to a piece of audio.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = music, audio, matplotlib
url = https://github.com/daniel-keitel/make-plot-playable/
project_urls =
    Bug Tracker = https://github.com/daniel-keitel/make-plot-playable/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib ~= 3.5.2
    miniaudio
    numpy
    dill
    PyQt5
    pycairo
    SoundFile

[options.packages.find]
where = src