[metadata]
name = playplot
version = 0.0.3
author = Daniel Keitel
author_email = daniel.mg.keitel@fau.de
description = Create and sync multiple interactive matplotlib plots to a piece of audio.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = music, audio, matplotlib, audiolabs, fau, make plot playable, visualisation, interactive, player, jupyter, ipython
url = https://github.com/groupmm/playplot
project_urls =
    Documentation = https://groupmm.github.io/playplot
    Tracker = https://github.com/groupmm/playplot/issues
    Source = https://github.com/groupmm/playplot/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Documentation :: Sphinx
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib ~= 3.5.2
    miniaudio
    numpy
    dill
    PyQt5
    pycairo
    SoundFile

[options.packages.find]
where = src