[metadata]
name = playplot
version = 0.1.1b1
author = Daniel Keitel
author_email = daniel.mg.keitel@fau.de
description = Create and sync multiple interactive matplotlib plots to a piece of audio.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = music, audio, matplotlib, audiolabs, visualisation
url = https://github.com/groupmm/playplot
project_urls =
    Documentation = https://groupmm.github.io/playplot
    Tracker = https://github.com/groupmm/playplot/issues
    Source = https://github.com/groupmm/playplot/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib ~= 3.5.2
    miniaudio
    numpy
    dill
    PyQt5
    pycairo
    SoundFile

[options.packages.find]
where = src